#64 - Fix household api
